--- a/views/menuPrincipal.ejs
+++ b/views/menuPrincipal.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Principal</title>
-    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="http://localhost:3000/css/menu.css">
 </head>
 <body>
     <header>
@@ -15,8 +15,9 @@
             <ul>
                 <li class="lista-menu"><a class="link-menu" href="/passeios/formCadastro" >Cadastrar Passeio</a></li>
                 <li class="lista-menu"><a href="/passeios/formConsulta" class="link-menu">Consultar Passeio</a></li>
-                <li class="lista-menu"><a href="formCliente" class="link-menu">Cadastrar Cliente</a></li>
-                <li class="lista-menu"><a href="formConsultaCliente" class="link-menu">Consultar Cliente</a></li>
+                <li class="lista-menu"><a  class="link-menu" href="/passeios/form">Cadastrar Vendas</a></li>
+                <li class="lista-menu"><a href="'/passeios" class="link-menu">Consultar Vendas</a></li>
+            </ul>
             </ul>
         </div>
     </main>
