--- a/views/formCadastro.ejs
+++ b/views/formCadastro.ejs
@@ -4,31 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Passeios</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <script src="/js/validador.js"></script> 
+    <link rel="stylesheet" type="text/css" href="http://localhost:3000/css/style.css">
+    <script src="http://localhost:3000/js/validador.js"></script> 
 </head>
 <body>
     <h1>Cadastro de Passeios </h1>
     <main>
-        <form action="/passeios/form" id="cadastro" name="cadastro_passeio" method="post" onsubmit="return validarDadosPasseio()">
+        <form action="/passeios/formCadastro" id="cadastro" name="cadastro_passeio" method="post" onsubmit="return validarDadosPasseio()">
 
             <label for="local">Local: </label>
             <input type="text" name="local" id="local" placeholder="Qual destino?" required>
             
             <label for="valor">Valor (R$): </label>
             <input type="number" id="valor" name="valor" step="0.01" min="0" placeholder="R$ 0,00" oninput="formatarMoeda(this)" required>
+            
+            <label for="data">Data: </label>
+            <input type="date" name="data" id="data" required>
 
             <label for="vagas">Número de vagas: </label>
-            <input type="number" name="vagasvagas" id="" required>
-
-            <label for="pontodeencontro">Ponto de encontro</label>
-            <input type="radio" name="pontodeencontro" id="rodoviaria"><label for="rodoviaria">Rodoviária</label>
-            <input type="radio" name="pontodeencontro" id="shopping"><label for="shopping">Shopping</label>
-            <input type="radio" name="pontodeencontro" id="aeroporto"><label for="aeroporto">Aeroporto</label>
+            <input type="number" name="vagas" id="vagas" min="1" placeholder="Ex: 10" required>
 
             <label for="tipo">Tipo de passeio: </label>
-            <select name="tipo" id="tipo">
-                <option value="..."></option>
+            <select name="tipo" id="tipo" required>
+                <option value=""  disabled selected></option>
                 <option value="aventura">Aventura</option>
                 <option value="romantico">Romântico</option>
                 <option value="cultural">Cultural</option>
@@ -37,49 +35,72 @@
             </select>
 
             <label>Idioma que será conduzido: </label>
-            <input type="radio" name="idioma" id="ingles"><label for="ingles">Inglês</label>
-            <input type="radio" name="idioma" id="espanhol"><label for="espanhol">Espanhol</label>
-            <input type="radio" name="idioma" id="portugues"><label for="portugues">Português</label>
+            <div class="idioma">
+                <input type="radio" name="idioma" id="ingles" value="ingles" required><label for="ingles">Inglês</label>
+                <input type="radio" name="idioma" id="espanhol"  value="espanhol"><label for="espanhol">Espanhol</label>
+                <input type="radio" name="idioma" id="portugues" value="portugues"><label for="portugues">Português</label>
+            </div>
 
             <label for="guia">Guia Responsável:</label>
-            <input type="text" name="guia" id="guia">
+            <input type="text" name="guia" id="guia"  placeholder="Nome do guia" required>
 
             <label>Serviços inclusos: </label>
                 <div class="servico">
-                    <input type="checkbox" name="servico" id="transporte">
-                    <label for="transporte">Transporte</label>
-                    <input type="checkbox" name="servico" id="alimentacao">
-                    <label for="alimentacao">Alimentação completa</label>
-                    <input type="checkbox" name="servico" id="cafedamanha">
-                    <label for="cafedamanha">Apenas Café da Manhã</label>
-                    <input type="checkbox" name="servico" id="almoco">
-                    <label for="almoco">Apenas Almoço</label>
-                    <input type="checkbox" name="servico" id="fotografia">
-                    <label for="fotografia">Pacote de fotos</label>
-                    <input type="checkbox" name="servico" id="primeirossocorros">
-                    <label for="primeirossocorros">Kit de primeiros socorros</label>
-                    <input type="checkbox" name="servico" id="equipamentos">
-                    <label for="equipamentos">Equipamentos extras</label>
-                    <input type="checkbox" name="servico" id="lembrancas">
-                    <label for="lembrancas">Lembranças ou Brindes</label>
-                    <input type="checkbox" name="servico" id="criancas">
-                    <label for="criancas">Suporte para crianças</label>
-                    <input type="checkbox" name="servico" id="interprete">
-                    <label for="interprete">Tradução ou Intérprete</label>
+                    <div class="column">
+                        <input type="checkbox" name="transporte" id="transporte" value="transporte">
+                        <label for="transporte">Transporte</label>
+                        <input type="checkbox" name="alimentacao" id="alimentacao" value="alimentacao">
+                        <label for="alimentacao">Alimentação completa</label>
+                        <input type="checkbox" name="cafedamanha" id="cafedamanha" value="cafedamanha">
+                        <label for="cafedamanha">Apenas Café da Manhã</label>
+                        <input type="checkbox" name="almoco" id="almoco" value="almoco">
+                        <label for="almoco">Apenas Almoço</label>
+                        <input type="checkbox" name="fotografia" id="fotografia" value="fotografia">
+                        <label for="fotografia">Pacote de fotos</label>
+                    </div>
+                    <div class="column">
+                        <input type="checkbox" name="primeirossocorros" id="primeirossocorros" value="primeirossocorros">
+                        <label for="primeirossocorros">Kit de primeiros socorros</label>
+                        <input type="checkbox" name="equipamentos" id="equipamentos" value="equipamentos">
+                        <label for="equipamentos">Equipamentos extras</label>
+                        <input type="checkbox" name="lembrancas" id="lembrancas" value="lembrancas">
+                        <label for="lembrancas">Lembranças ou Brindes</label>
+                        <input type="checkbox" name="criancas" id="criancas" value="criancas">
+                        <label for="criancas">Suporte para crianças</label>
+                        <input type="checkbox" name="interprete" id="interprete" value="interprete">
+                        <label for="interprete">Tradução ou Intérprete</label>
+                    </div>
                 </div>
 
             <label for="descricao">Descrição: </label>
-            <textarea cols="20" rows="10" name="descricao" id="descricao" placeholder="Detalhe sobre seu passeio"></textarea>
+            <textarea name="descricao" id="descricao" placeholder="Detalhe sobre seu passeio" required></textarea>
 
             <input type="submit" value="Salvar"/>
         </form>
     </main>
     <footer>
         <ul>
-            <li><a href="/menuPrincipal.ejs">Voltar</a></li>
-            <li><a href="/formConsulta.ejs">Consultar Passeios</a></li>
+            <li><a href="http://localhost:3000/">Voltar</a></li>
         </ul>
     </footer>
-    <script src="passeio.js"></script>
+    <script>
+
+        fetch('/api/checkbox-data')
+            .then(response => response.json())
+            .then(dadosDoBanco => {
+
+                document.getElementById('transporte').checked = dadosDoBanco.transporte;
+                document.getElementById('alimentacao').checked = dadosDoBanco.alimentacao;
+                document.getElementById('cafedamanha').checked = dadosDoBanco.cafedamanha;
+                document.getElementById('almoco').checked = dadosDoBanco.almoco;
+                document.getElementById('fotografia').checked = dadosDoBanco.fotografia;
+                document.getElementById('primeirossocorros').checked = dadosDoBanco.primeirossocorros;
+                document.getElementById('equipamentos').checked = dadosDoBanco.equipamentos;
+                document.getElementById('lembrancas').checked = dadosDoBanco.lembrancas;
+                document.getElementById('criancas').checked = dadosDoBanco.criancas;
+                document.getElementById('interprete').checked = dadosDoBanco.interprete;
+            })
+            .catch(error => console.error('Erro ao buscar dados:', error));
+    </script>
 </body>
 </html>
