--- a/views/formAtualiza.ejs
+++ b/views/formAtualiza.ejs
@@ -1,47 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atualização de Passeio</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="http://localhost:3000/css/style.css">
+    <script src="http://localhost:3000/js/validador.js"></script> 
 </head>
 <body>
     <header>
         <h1>Atualização de Passeio</h1>
     </header>
     <main>
-        <form name="atualizar" action="/passeios/form/atualizar?_method=PUT" method="post">
-            <input type="hidden" name="id" value="<%= passeio.id %>" >
+        <form name="atualizar" action="/passeios/formAtualiza/atualizar?_method=PUT" method="post">
+            <input type="hidden" name="id" value="<%= passeio.id %>">
             <label for="local">Local: </label>
-            <input type="text" name="local" id="local" value="<%= passeio.local %>" placeholder="Qual destino?" required>
+            <input type="text" name="local" id="local" value="<%= passeio.local %>" placeholder="Qual o seu destino?" required>
+
             <label for="valor">Valor (R$): </label>
-            <input type="number" id="valor" name="valor" step="0.01" min="0" value="<%= passeio.valor %>" placeholder="R$ 0,00" oninput="formatarMoeda(this)" required>
+            <input type="number" id="valor" name="valor" step="0.01" min="0" value="<%= passeio.valor %>" placeholder="R$ 0,00" required>            
+
+            <label for="data">Data: </label>
+            <input type="date" name="data" id="data" value="<%= passeio.data %>" required>
+            
+            <label for="vagas">Número de vagas: </label>
+            <input type="number" name="vagas" id="vagas" value="<%= passeio.vagas %>" required>
+            
+            <label for="tipo">Tipo de passeio: </label>
+            <select name="tipo" id="tipo" required>
+                <option value="" disabled selected>Selecione um tipo</option>
+                <option value="aventura" <%= passeio.tipo === 'aventura' ? 'selected' : '' %>>Aventura</option>
+                <option value="romantico" <%= passeio.tipo === 'romantico' ? 'selected' : '' %>>Romântico</option>
+                <option value="cultural" <%= passeio.tipo === 'cultural' ? 'selected' : '' %>>Cultural</option>
+                <option value="gastronomico" <%= passeio.tipo === 'gastronomico' ? 'selected' : '' %>>Gastronômico</option>
+                <option value="outros" <%= passeio.tipo === 'outros' ? 'selected' : '' %>>Outros</option>
+            </select>
+
+            <label>Idioma que será conduzido: </label>
+            <div class="idioma">
+                <input type="radio" name="idioma" value="ingles" id="ingles" <%= passeio.idioma === 'ingles' ? 'checked' : '' %>><label for="ingles">Inglês</label>
+                <input type="radio" name="idioma" value="espanhol" id="espanhol" <%= passeio.idioma === 'espanhol' ? 'checked' : '' %>><label for="espanhol">Espanhol</label>
+                <input type="radio" name="idioma" value="portugues" id="portugues" <%= passeio.idioma === 'portugues' ? 'checked' : '' %>><label for="portugues">Português</label>
+            </div>
+
+            <label for="guia">Guia Responsável:</label>
+            <input type="text" name="guia" value="<%= passeio.guia %>" id="guia">
+
+            <label>Serviços inclusos: </label>
+            <div class="servico">
+                <div class="column">
+                    <input type="checkbox" name="transporte" id="transporte" <%= passeio.transporte ? 'checked' : '' %>>
+                    <label for="transporte">Transporte</label>
+                    
+                    <input type="checkbox" name="alimentacao" id="alimentacao" <%= passeio.alimentacao ? 'checked' : '' %>>
+                    <label for="alimentacao">Alimentação completa</label>
+                    
+                    <input type="checkbox" name="cafedamanha" id="cafedamanha" <%= passeio.cafedamanha ? 'checked' : '' %>>
+                    <label for="cafedamanha">Apenas Café da Manhã</label>
+                    
+                    <input type="checkbox" name="almoco" id="almoco" <%= passeio.almoco ? 'checked' : '' %>>
+                    <label for="almoco">Apenas Almoço</label>
+                    
+                    <input type="checkbox" name="fotografia" id="fotografia" <%= passeio.fotografia ? 'checked' : '' %>>
+                    <label for="fotografia">Pacote de fotos</label>
+                </div>
+                
+                <div class="column">
+                    <input type="checkbox" name="primeirossocorros" id="primeirossocorros" <%= passeio.primeirossocorros ? 'checked' : '' %>>
+                    <label for="primeirossocorros">Kit de primeiros socorros</label>
+                    
+                    <input type="checkbox" name="equipamentos" id="equipamentos" <%= passeio.equipamentos ? 'checked' : '' %>>
+                    <label for="equipamentos">Equipamentos extras</label>
+                    
+                    <input type="checkbox" name="lembrancas" id="lembrancas" <%= passeio.lembrancas ? 'checked' : '' %>>
+                    <label for="lembrancas">Lembranças ou Brindes</label>
+                    
+                    <input type="checkbox" name="criancas" id="criancas" <%= passeio.criancas ? 'checked' : '' %>>
+                    <label for="criancas">Suporte para crianças</label>
+                    
+                    <input type="checkbox" name="interprete" id="interprete" <%= passeio.interprete ? 'checked' : '' %>>
+                    <label for="interprete">Tradução ou Intérprete</label>
+                </div>
+            </div>
+
             <label for="descricao">Descrição: </label>
             <textarea name="descricao" id="descricao" placeholder="Detalhe sobre seu passeio"><%= passeio.descricao %></textarea>
 
             <input type="submit" value="Atualizar">
         </form>
     </main>
-    <footer>
-        <ul>
-            <li><a href="index.ejs">Voltar</a></li>
-            <li><a href="formConsulta.ejs">Consultar Passeios</a></li>
-        </ul>
-    </footer>
-    <script>
-        function formatarMoeda(input) {
-            let valor = input.value;
-  
-            valor = valor.replace(/\D/g, "");
-  
-            valor = (valor / 100).toFixed(2) + "";
-            valor = valor.replace(".", ",");
-            valor = valor.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-
-            input.value = "R$ " + valor;
-        }
-  
-    </script>
 </body>
 </html>
